Tried to fix horizontal scroll on mobile

--- a/api/public/js/blather/src/css/app.scss
+++ b/api/public/js/blather/src/css/app.scss
@@ -5,10 +5,15 @@
     src: url("fonts/merriweather/Merriweather-Regular.otf");
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
     height: 100%;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 .app {
@@ -18,9 +23,7 @@ body {
 .mainContainer {
     min-height: 100vh;
     margin-top: 5.0em;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 15px;
+    padding: 15px 15px 0 15px;
 
     &.bc {
         margin-top: 2.4em;
